# gnnco

./: .gitignore  README.md  pyproject.toml
notebooks/: corafull.ipynb  debug.ipynb  embeddings_pca.ipynb  gae.ipynb  gnnco_core.ipynb  gnnco_database.ipynb  mol_viz.ipynb  sampling.ipynb  similarity_visualization.ipynb
pyscripts/: cora-full.py  karate-club.py  qm7b.py
scripts/: array-train.sh  cpu.sh  generate-datasets.sh  gpu.sh  merge-datasets.sh  sbatch-train-siamese-gm.sbatch  train-siamese-gm.sh
src/gnnco/: __init__.py  _core.py  chem.py  random.py  siamese_gm.py
src/gnnco/chem/: _chem.py
src/gnnco/dataset/: __init__.py  generate.py  merge.py
src/gnnco/graph_matching/: __init__.py  _dataset.py
src/gnnco/graph_matching/_scripts/: data_stats.py  generate_aqsol.py  generate_cora_full.py  generate_erdos_renyi.py  generate_karate_club.py  generate_ogbn_arxiv.py  generate_pcqm4mv2.py  generate_qm7b.py  laplacian_performances.py  train.py
src/gnnco/graph_matching/_train/: training.py  utils.py
src/gnnco/models/: __init__.py  _gat.py  _gated_gcn.py  _gatv2.py  _gcn.py  _gin.py  _laplacian.py  _wl_continuous.py
src/gnnco/random/: __init__.py  _random.py
src/gnnco/train/: __main__.py
src/gnnco/visualisation/: __init__.py
src/gnnco/visualization/: _visualization.py
