[project]
name = "gnnco"
version = "0.1.0"
description = "gnnco is a package that simplifies benchmarking and training GNNs on task issued from Combinatorial Optimization (CO)."
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2",
    "torch-geometric>=2.5.2",
    "safetensors>=0.4.2",
    "argparse>=1.4.0",
    "click>=8.1.7",
    "mlflow>=2.11.3",
    "setuptools>=69.2.0",
    "graphviz>=0.20.3",
    "rdkit>=2023.9.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
gm-generate-er = "gnnco.graph_matching._scripts.generate_erdos_renyi:main"
gm-generate-aqsol = "gnnco.graph_matching._scripts.generate_aqsol:main"
gm-generate-karateclub = "gnnco.graph_matching._scripts.generate_karate_club:main"
gm-generate-corafull = "gnnco.graph_matching._scripts.generate_cora_full:main"

gm-train = "gnnco.graph_matching._scripts.train:main"

gm-data-stats = "gnnco.graph_matching._scripts.data_stats:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.4",
    "ipython>=8.22.2",
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = false

[tool.hatch.build.targets.wheel]
packages = ["src/gnnco"]
